--- a/cajaAhorros/app_cajaAhorros/templates/socio_list.html
+++ b/cajaAhorros/app_cajaAhorros/templates/socio_list.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     <h1>Listado de Socios</h1>
-
+    <a href="{% url 'crear_socio' %}">➕ Nuevo Socio</a>
     <table>
         <thead>
             <tr>
