se agrego calculo de edad en base a la fecha de nacimiento en detalle

--- a/cajaAhorros/app_cajaAhorros/templates/detalle.html
+++ b/cajaAhorros/app_cajaAhorros/templates/detalle.html
@@ -23,6 +23,7 @@
         <h1>Detalle del Socio</h1>
         <p><strong>Cédula:</strong> {{ socio.cedula }}</p>
         <p><strong>Nombre:</strong> {{ socio.nombre }} {{ socio.apellido }}</p>
+        <p><strong>Edad:</strong> {{ edad }} años</p>
         <p><strong>Fecha de Nacimiento:</strong> {{ socio.fecha_nacimiento }}</p>
         <p><strong>Fecha de Ingreso:</strong> {{ socio.fecha_ingreso }}</p>
         <p><strong>Foto:</strong><br>
