--- a/cajaAhorros/app_cajaAhorros/templates/crear_socio.html
+++ b/cajaAhorros/app_cajaAhorros/templates/crear_socio.html
@@ -1,17 +1,14 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Registrar Socio</title>
-</head>
-<body>
-    <h2>Nuevo Socio</h2>
-    
+    {% extends "base.html" %}
+
+    {% block title %}<h2>Nuevo Socio</h2>{% endblock title %}
+
+    {% block content %} 
+       
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Guardar</button>
+        <button class="btn btn-primary" type="submit">Guardar</button>
         <a href="{% url 'socio_list' %}">Cancelar</a>
     </form>
-</body>
-</html>
+
+    {% endblock content %} 
