--- a/cajaAhorros/app_cajaAhorros/templates/base.html
+++ b/cajaAhorros/app_cajaAhorros/templates/base.html
@@ -6,6 +6,7 @@
     <title>{% block title %}Caja de Ahorro{% endblock title %}</title>
 
     {% load static %}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
 </head>
