se arreglo el problema de que no se visualisaban las fechas y la imagen en editar socio

--- a/cajaAhorros/app_cajaAhorros/templates/crear_socio.html
+++ b/cajaAhorros/app_cajaAhorros/templates/crear_socio.html
@@ -1,9 +1,16 @@
-    {% extends "base.html" %}
+{% extends "base.html" %}
 
-    {% block title %}<h2>Nuevo Socio</h2>{% endblock title %}
+{% block title %}
+    <h2>{% if form.instance.pk %}Editar Socio{% else %}Nuevo Socio{% endif %}</h2>
+{% endblock title %}
 
-    {% block content %} 
-       
+{% block content %} 
+
+    {% if form.instance.pk and form.instance.foto %}
+        <p>Foto actual:</p>
+        <img src="{{ form.instance.foto.url }}" alt="Foto del socio" width="150" height="150">
+    {% endif %}
+
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
@@ -11,4 +18,4 @@
         <a href="{% url 'socio_list' %}">Cancelar</a>
     </form>
 
-    {% endblock content %} 
+{% endblock content %}
