--- a/cajaAhorros/app_cajaAhorros/templates/account/login.html
+++ b/cajaAhorros/app_cajaAhorros/templates/account/login.html
@@ -11,8 +11,8 @@
                               <div class="d-flex align-items-center fw-bolder fs-3 d-inline-block"><img src="https://humancentric.school/wp-content/uploads/2024/08/HumanCentric-Isotipo.png" alt="phoenix" width="58" />
                               </div>
                             </a>
-                            <h3 class="text-body-highlight">Registro de nuevo paciente</h3>
-                            <p class="text-body-tertiary">Registrese para poder crear una cita</p>
+                            <h3 class="text-body-highlight">Inisiar Sesiòn</h3>
+                            <p class="text-body-tertiary">Caja de ahorro y creditos "Nantar" Sevilla don Bosco</p>
                           </div>
                         <div class="card-body p-4">
                             <div class="p-3">
