--- a/cajaAhorros/app_cajaAhorros/templates/base.html
+++ b/cajaAhorros/app_cajaAhorros/templates/base.html
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link active" href="{% url 'socio_list' %}">Inicio</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="{% url 'prestamo_list' %}">Prestamos</a>
+                        </li>
                         <!-- Puedes añadir más ítems aquí -->
                     </ul>
                     <ul class="navbar-nav ms-auto">
