--- a/cajaAhorros/app_cajaAhorros/templates/socios/socio_list.html
+++ b/cajaAhorros/app_cajaAhorros/templates/socios/socio_list.html
@@ -10,9 +10,9 @@
   <i class="bi bi-person-plus"></i> Nuevo Socio
 </a>
 
-  <button type="button" class="btn btn-secondary" onclick="abrirModalCargo()">
+  <!-- <button type="button" class="btn btn-secondary" onclick="abrirModalCargo()">
     <i class="bi bi-gear"></i> Gestionar Cargos
-  </button>
+  </button> -->
 
   <form method="get" class="d-flex align-items-center mb-0">
     <label for="filtro" class="me-2 mb-0">Filtrar por estado:</label>
