--- a/cajaAhorros/app_cajaAhorros/templates/account/login.html
+++ b/cajaAhorros/app_cajaAhorros/templates/account/login.html
@@ -50,10 +50,10 @@
                         </div>
 
 
-                    <div class="mt-5 text-center">
+                    <!-- <div class="mt-5 text-center">
                         <p>Don't have an account ? <a href="{{ signup_url }}" class="fw-medium text-primary"> Signup now </a> </p>
                         
-                    </div>
+                    </div> -->
 
 {% endblock content %}
 
